[package]
name = "nlp_rust"
version = "0.1.0"
authors = ["hayapo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.2"
serde = "1.0.123"
serde_json = "1.0.62"
serde-lite-derive = "0.1.1"
rand = "0.8.3"
regex = "1.4.3"
reqwest = {version = "0.11.0", features = ["json"]} 
tokio = "1.2.0"
async-trait = "0.1.42"
lindera = "0.7.1"
lindera-ipadic = "0.7.1"
metered = "0.7.0"